# html-sanitizer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  setuplib.py  tox.ini
.github/workflows/: lint.yml  test.yml
feincms_cleanse/: __init__.py  models.py  tests.py
feincms_cleanse/tests/: __init__.py  test_cleanse.py
html_sanitizer/: __init__.py  __main__.py  django.py  sanitizer.py  tests.py
