[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "html-sanitizer"
description = "HTML sanitizer"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Matthias Kestenholz", email = "mk@feinheit.ch" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
]
dynamic = [
  "version",
]
dependencies = [
  "beautifulsoup4",
  "lxml>=5.2",
  "lxml-html-clean>=0.1",
]
urls.Homepage = "https://github.com/matthiask/html-sanitizer/"

[tool.hatch.version]
path = "html_sanitizer/__init__.py"

[tool.ruff]
target-version = "py38"

fix = true
show-fixes = true
extend-select = [
  # pyflakes, pycodestyle
  "F",
  "E",
  "W",
  # mmcabe
  "C90",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # flake8-django
  "DJ",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # flake8-gettext
  "INT",
  # pygrep-hooks
  "PGH",
  # pylint
  "PLC",
  "PLE",
  "PLW",
  # unused noqa
  "RUF100",
]
extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
]
mccabe.max-complexity = 15
per-file-ignores."*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
isort.combine-as-imports = true
isort.lines-after-imports = 2
