[metadata]
name = html_sanitizer
version = attr: html_sanitizer.__version__
description = HTML sanitizer
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/html-sanitizer/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development

[options]
packages = find:
install_requires =
    beautifulsoup4
    lxml>=4.6.5
python_requires = >=3.6
include_package_data = True

[flake8]
exclude = venv,build,docs,.eggs,.tox
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *html_sanitizer*
omit =
    *migrations*
    *tests*
    *.tox*
